--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/scrambled-eggs.html">Amazing Scrambled Eggs Recipe!</a>
+        <ul>
+            <li><a href="recipes/scrambled-eggs.html">Amazing Scrambled Eggs Recipe!</a></li>
+            <li><a href="recipes/empty-plate.html">What could this be?</a></li>
+        </ul>
     </body>
 </html>
