add color and text elements to main page

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="title">Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/scrambled-eggs.html">Amazing Scrambled Eggs Recipe!</a></li>
-            <li><a href="recipes/empty-plate.html">What could this be?</a></li>
+            <li class="recipes-list Eggs"><a href="recipes/scrambled-eggs.html">Amazing Scrambled Eggs Recipe!</a></li>
+            <li class="recipes-list empty-plate"><a href="recipes/empty-plate.html">What could this be?</a></li>
         </ul>
     </body>
 </html>
