Add image and text elements to main page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     </head>
 
     <body>
-        <h1 class="title">Odin Recipes</h1>
+        <h1 class="title"><em>Odin Recipes</em></h1>
+        <img src="./img/odin-eating.jpg" alt="Odin holding a mug of beer surronded by friends" class="odin-center">
         <ul>
             <li class="recipes-list Eggs"><a href="recipes/scrambled-eggs.html">Amazing Scrambled Eggs Recipe!</a></li>
             <li class="recipes-list empty-plate"><a href="recipes/empty-plate.html">What could this be?</a></li>
